[metadata]
name = project_ATMExam
version = 0.0.0
license = MIT License
description = Data Academy ATM Exam
long_description = file: README.rst, LICENSE.rst
author = Hayden McKenzie
author_email = haydendanielmckenzie@gmail.com
classifiers = 
    Programming Language :: Python :: 3

[option]
packages = find:
package_dir = 
    =src
include_package_data = True
install_requires = >=3.7

[options.packages.find]
where=src 